--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile project(":ODsayAndroidSDK")
+
 }
