--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -35,4 +40,5 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
     //json데이터를 객체화 시키기 위한 구글에서 나온 라이브러리
+
 }
