--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation files('libs/com.skt.Tmap_1.66.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -40,5 +42,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
     //json데이터를 객체화 시키기 위한 구글에서 나온 라이브러리
+
+    implementation 'gun0912.ted:tedpermission:2.2.3'
+    //퍼미션 체크를 쉽게 해주는 라이브러리
+
 
 }
